--- a/SomeName/Items/Resources/ItemImages.resx
+++ b/SomeName/Items/Resources/ItemImages.resx
@@ -119,9 +119,12 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="BeginnerSword" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\weapon_squires_sword_i00.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>beginnersword.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Sword" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\weapon_bastard_sword_i00.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="SimpleArmor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>simplearmor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SimpleSword" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>simplesword.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
