--- a/SomeName/Items/Resources/ItemImages.resx
+++ b/SomeName/Items/Resources/ItemImages.resx
@@ -127,6 +127,9 @@
   <data name="SimpleArmor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>simplearmor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SimpleGloves" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>simplegloves.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SimpleSword" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>simplesword.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
