--- a/SomeName/Items/Resources/ItemImages.resx
+++ b/SomeName/Items/Resources/ItemImages.resx
@@ -121,6 +121,9 @@
   <data name="BeginnerSword" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>beginnersword.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ScrollOfEnchantArmor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>scrollofenchantarmor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ScrollOfEnchantWeapon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>scrollofenchantweapon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
